<resources>
    <string name="app_name">Tec Talk</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="chats">Chats</string>
    <string name="groups">Groups</string>
    <string name="ar_selfie">AR selfie</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="enter_email">Enter Email..</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="new_user">NEW USER?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="register">REGISTER</string>
    <string name="register_with_google">Register With GOOGLE</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="password_size">Password must be at least 6 characters</string>
    <string name="signup_successfully">Sign up successful</string>
    <string name="no_one_to_chat_with_yet_add_more_friend_to_get_going">No chat history yet!! Search friends and get going!!</string>

    <string name="you">You: %1$s</string>
    <string name="you_sent_image">You sent an image</string>
    <string name="other">%1$s: %2$s</string>
    <string name="other_image">%1$s sent an image</string>
    <string name="other_file">%1$s sent a file</string>
    <string name="you_sent_file">you sent a file</string>
    <string name="other_record">%1$s sent a voice record</string>
    <string name="you_sent_record">you sent a voice record</string>
    <string name="your_requests">Your Requests</string>
    <string name="logout">Logout</string>
    <string name="close">Close</string>
    <string name="send_picture">Send Picture</string>
    <string name="send_file">Send file</string>
    <string name="attachments">attachments</string>
    <string name="type_a_message">Type a message</string>

    <string name="empty_message">Can\'t send empty message</string>
    <string name="find_friends">Find Friends</string>
    <string name="select_profile_picture">Select Profile Picture</string>
    <string name="take_new_profile_picture">Take new picture</string>
    <string name="uploading">uploading..</string>
    <string name="edit_profile">edit profile</string>
    <string name="about_me">About me</string>
    <string name="edit">Edit</string>
    <string name="type_something_to_let_your_friends_know_you_better">Type something to let your friends know you better</string>
    <string name="hi_there">for more info, please connect with me</string>
    <string name="friends">Friends</string>
    <string name="no_friends_yet">You don\'t have friends yet</string>
    <string name="contacts">Contacts</string>
    <string name="my_profile">My Profile</string>
    <string name="submit">Submit</string>
    <string name="no_users_to_add_yet">No Users to add yet.</string>
    <string name="search_for_friends">Search For Friends</string>
    <string name="friend_request_not_sent">Connect</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="delete_from_friends">Remove From Friends</string>
    <string name="no_friends">User has no friends yet</string>
    <string name="confirm">Confirm</string>
    <string name="reject">Reject</string>
    <string name="no_incoming_requests">No incoming requests</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="error_while_loading">Error while loading incoming friend requests</string>
    <string name="add_to_your_friends">added to your friends</string>
    <string name="request_deleted">Request deleted</string>
    <string name="no_chat_history">no_chat_history_yet_click_chat_button_to_start_chatting</string>
    <string name="create_group">Create Group</string>
    <string name="join_group_using_key">Join Group using Key</string>
    <string name="group_name">Group Name</string>
    <string name="description">Description</string>
    <string name="new_group">New Group</string>
    <string name="create_new_group">Create New Group</string>
    <string name="pinned_message">Pinned Message</string>
    <string name="hey_guys_thank_you_for_joing_this_group">Hey guys thank you for joing this group...</string>
    <string name="do_you_want_download_file">Do you want to download clicked file?</string>
    <string name="yes">Yes</string>
    <string name="permission_required">Permission is needed for this feature to work</string>
    <string name="grant">Grant</string>
    <string name="info">Info</string>
    <string name="add_members">Add Members</string>
    <string name="finished_recording">Finished recording</string>
    <string name="recording">Recording</string>
    <string name="no_suitable_file_on_this_device">No suitable file manager was found on this device</string>
    <string name="select_picture">Select Picture</string>
    <string name="members">Members</string>
    <string name="group_information">Group Information</string>
    <string name="no_description_yet">No Description yet</string>
    <string name="add">Add</string>
    <string name="selfie_lab">Selfie Lab</string>
    <string name="create_your_own_ar_selfies">Create your own AR selfies</string>
    <string name="normal_selfie">Normal Selfie</string>
    <string name="ar_on_floor">AR on Floor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>