<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/chats_icon"
        android:title="@string/chats" />
    <item
        android:id="@+id/groupFragment"
        android:icon="@drawable/groups_icon"
        android:title="@string/groups" />
    <item
        android:id="@+id/ARselfieFragment"
        android:icon="@drawable/ar_selfie_icon"
        android:title="@string/ar_selfie" />
    <item
        android:id="@+id/findUserFragment"
        android:icon="@drawable/search_icon"
        android:title="@string/search" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />

</menu>