<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/circularbordersolid"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:contentDescription="@string/close"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:src="@drawable/ic_baseline_close_24"
        tools:ignore="RtlHardcoded" />

    <Button

        android:id="@+id/sendPictureButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/percianBlue"
        android:text="@string/send_picture"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textSize="18sp" />

    <Button
        android:id="@+id/sendFileButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/percianBlue"
        android:text="@string/send_file"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textSize="18sp" />


</LinearLayout>