<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:id="@+id/parentScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F7F7F7"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="226dp"
                    android:layout_height="153dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/login_illu"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/round_rectangle"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView9">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="8dp"
                            android:fontFamily="@font/sen_regular"
                            android:hint="@string/enter_email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/percianBlue"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        app:errorEnabled="true"
                        app:layout_constraintTop_toBottomOf="@id/email"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="8dp"
                            android:gravity="center_vertical"
                            android:hint="@string/password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textColor="@color/percianBlue"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/loginButton"
                    android:layout_width="200dp"
                    android:layout_height="41dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="right"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_button"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="@+id/linear"
                    app:layout_constraintStart_toStartOf="@+id/linear"
                    app:layout_constraintTop_toBottomOf="@+id/linear"
                    tools:ignore="RtlHardcoded">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/sen_regular"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="#ffffff"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:id="@+id/view5"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:background="#000"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:background="#000"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintEnd_toStartOf="@+id/textView4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />


                <!-- todo create login with google-->
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/login_with_google"
                    app:layout_constraintEnd_toStartOf="@+id/view5"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/view4"
                    app:layout_constraintTop_toBottomOf="@+id/loginButton" />

                <!-- todo create login with facebook-->
                <!--                <fragment-->
                <!--                    android:id="@+id/facebookLoginFragment"-->
                <!--                    android:name="com.facebook.internal.FacebookDialogFragment"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    app:layout_constraintEnd_toEndOf="parent"-->
                <!--                    app:layout_constraintStart_toStartOf="parent"-->
                <!--                    app:layout_constraintTop_toBottomOf="@+id/loginButton" />-->

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/new_user"
                    app:layout_constraintEnd_toStartOf="@+id/gotoSignUpFragmentTextView"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/gotoSignUpFragmentTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:navigateToSignUpFragment="@{true}"
                    android:text="@string/sign_up"
                    android:textColor="#FF0000"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@+id/textView3" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="34dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/sen_regular"
                    android:text="Login.."
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/percianBlue"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView9"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView9"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="HardcodedText" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--for showing loading-->
            <include
                android:id="@+id/loadingLayout"
                layout="@layout/loading"
                android:visibility="gone" />

            <!--for showing if there any issue-->
            <include
                android:id="@+id/issueLayout"
                layout="@layout/issue_layout"
                android:closeIssueLayout="@{true}"
                android:visibility="gone" />

        </FrameLayout>
    </ScrollView>
</layout>





